--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gulp-coffeescript": "0.0.15",
     "gulp-include": "^2.3.1",
     "gulp-rename": "^1.4.0",
+    "gulp-uglify-es": "^1.0.4",
     "gulp-util": "^3.0.8"
   },
   "repository": {
